# deep-attention-visual-odometry

./: .gitignore  README.md  pyproject.toml
deep_attention_visual_odometry/: camera_calibration_from_oracle_matches.py
deep_attention_visual_odometry/autograd_solvers/: __init__.py  bfgs_solver.py  sgd_solver.py
deep_attention_visual_odometry/base_types/: __init__.py  camera_views_and_points.py  matched_points.py
deep_attention_visual_odometry/camera_model/: __init__.py  calibration_pinhole_camera_model.py  pinhole_camera_model.py  pinhole_camera_model_l1.py  pinhole_camera_model_least_squares.py  simple_camera_model.py  simple_camera_model_mlp_guess.py  simple_camera_model_parameters.py
deep_attention_visual_odometry/configurations/: bfgs_solver_config.yaml  bfgs_solver_full_gradient_config.yaml  bfgs_solver_only_error_gradient_config.yaml  mlp_guess_config.yaml  test_config.yaml
deep_attention_visual_odometry/data/: __init__.py  camera_and_parameters_dataset.py
deep_attention_visual_odometry/data_modules/: __init__.py  camera_view_data_module.py
deep_attention_visual_odometry/geometry/: __init__.py  axis_angle_rotation.py  camera_projection.py  clamped_camera_projection.py  homogeneous_projection.py  lie_rotation.py  projective_plane_angle_distance.py  projective_plane_cosine_distance.py
deep_attention_visual_odometry/initial_guess/: __init__.py  base_pinhole_camera_model_guess.py  pinhole_camera_model_mlp_guess.py  pinhole_camera_model_transformer_guess.py  simple_camera_model_fixed_guess.py  simple_camera_model_mlp_guess.py
tests/: conftest.py
(+86 files in other folders)
