[tool.poetry]
name = "deep-attention-visual-odometry"
version = "0.1.0"
description = "Deep attention-based visual odometry"
authors = ["John Skinner <jskinn7@gmail.com>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "deep_attention_visual_odometry"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=2.0"
lightning = ">=2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
