[tool.poetry]
name = "deep-attention-visual-odometry"
version = "0.1.0"
description = "Deep attention-based visual odometry"
authors = ["John Skinner <jskinn7@gmail.com>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "deep_attention_visual_odometry"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = ">=2.4,<3.0"
lightning = {extras = ["pytorch-extra"], version = ">=2.1.0,<3.0"}
mlflow = ">=2.16.2,<3.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
